tests/ui/parser/issues/issue-20616-4.stderr
error: expected one of `>`, a const expression, lifetime, or type, found `,`
  --> $DIR/issue-20616-4.rs:16:34
   |
LL | type Type_4<T> = Type_1_<'static,, T>;
   |                                  ^ expected one of `>`, a const expression, lifetime, or type
   |
help: you might have meant to end the type parameters here
   |
LL | type Type_4<T> = Type_1_<'static>,, T>;
   |                                 +

error: aborting due to 1 previous error

